Closed
Bug 1398635
Opened 3 years ago
Closed 3 years ago
Crash in FileClose
Categories
(Core :: DOM: File, defect)
Tracking
()
RESOLVED
FIXED
mozilla57
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | unaffected |
firefox57 | --- | fixed |
People
(Reporter: marcia, Assigned: baku)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
3.74 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-aac59f8b-984f-41bb-b4dd-173860170910. ============================================================= Seen while looking at crash stats - crashes started using 20170908220146: http://bit.ly/2vOemII Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=d8e238b811d3dc74515065ae8cab6c74baf0295f&tochange=ea7b55d65d76214f97aaae502d65cb26fc6f5659 Possible regression from Bug 1397627? ni on baku
Flags: needinfo?(amarchesini)
Assignee | ||
Comment 1•3 years ago
|
||
This is because we keep mRemoteStream and mAsyncRemoteStream and we cancel it in different threads. mRemoteStream should be null when mAsyncRemoteStream is created.
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #8906488 -
Flags: review?(bugs)
Updated•3 years ago
|
Attachment #8906488 -
Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4edf631edd32 IPCBlobInputStream must release the remoteStream when the pipe inputStream wraps it in order to avoid double close(), r=smaug
Updated•3 years ago
|
Crash Signature: [@ FileClose] → [@ FileClose]
[@ arena_dalloc | _PR_Putfd | pt_Close]
[@ PR_Close | nsFileStreamBase::Close]
[@ <name omitted> | non-virtual thunk to mozilla::net::nsInputStreamTransport::Close]
Comment 3•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/4edf631edd32
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Updated•3 years ago
|
status-firefox55:
--- → unaffected
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Comment 7•3 years ago
|
||
--> adding crash signature from dupe bug 1398487.
Crash Signature: [@ FileClose]
[@ arena_dalloc | _PR_Putfd | pt_Close]
[@ PR_Close | nsFileStreamBase::Close]
[@ <name omitted> | non-virtual thunk to mozilla::net::nsInputStreamTransport::Close] → [@ FileClose]
[@ arena_dalloc | _PR_Putfd | pt_Close]
[@ PR_Close | nsFileStreamBase::Close]
[@ <name omitted> | non-virtual thunk to mozilla::net::nsInputStreamTransport::Close]
[@ free.cold.32 | _PR_Putfd | pt_Close.cold.7 ]
You need to log in
before you can comment on or make changes to this bug.
Description
•