Bug 1398635 - IPCBlobInputStream must release the remoteStream when the pipe inputStream wraps it in order to avoid double close(), r=smaug